# dnn-mlir

./: .gitmodules  CMakeLists.txt  README.md
cmake/: DNNMLIRConfig.cmake.in  TorchMLIR.cmake
include/: CMakeLists.txt
include/dnn-mlir/Conversion/: CMakeLists.txt
include/dnn-mlir/Conversion/TorchToDNN/: CMakeLists.txt  CaptureRegistry.h  Passes.h  Pipelines.h  TorchToDNNPatterns.h
include/dnn-mlir/Dialect/: CMakeLists.txt
lib/Conversion/TorchToDNN/: CMakeLists.txt  CaptureRegistry.cpp  DNNBackendToLinalgPipeline.cpp  StructuredOpPatterns.cpp  TestRestoreDNNToTorch.cpp  TorchToDNN.cpp  VerifyDNNBackendContract.cpp
lib/Conversion/TorchToDNN/Activation/: ActivationPatterns.cpp  ActivationRegistry.cpp  ConvertAtenCelu.cpp  ConvertAtenElu.cpp  ConvertAtenEluBackward.cpp  ConvertAtenGelu.cpp  ConvertAtenGeluBackward.cpp  ConvertAtenGlu.cpp  ConvertAtenHardshrink.cpp  ConvertAtenHardsigmoid.cpp  ConvertAtenHardswish.cpp  ConvertAtenHardtanh.cpp  ConvertAtenHardtanhBackward.cpp  ConvertAtenLeakyRelu.cpp  ConvertAtenLeakyReluBackward.cpp  ConvertAtenLogSigmoid.cpp  ConvertAtenLogSoftmax.cpp  ConvertAtenLogSoftmaxBackwardData.cpp  ConvertAtenLogSoftmaxInt.cpp  ConvertAtenMish.cpp  ConvertAtenPrelu.cpp  ConvertAtenRelu.cpp  ConvertAtenRelu6.cpp  ConvertAtenReluInplace.cpp  ConvertAtenRrelu.cpp  ConvertAtenRreluWithNoiseBackward.cpp  ConvertAtenRreluWithNoiseFunctional.cpp  ConvertAtenSafeSoftmax.cpp  ConvertAtenSelu.cpp  ConvertAtenSigmoid.cpp  ConvertAtenSigmoidBackward.cpp  ConvertAtenSilu.cpp  ConvertAtenSoftmax.cpp  ConvertAtenSoftmaxBackwardData.cpp  ConvertAtenSoftmaxInt.cpp  ConvertAtenSoftplus.cpp  ConvertAtenSoftplusBackward.cpp  ConvertAtenSoftshrink.cpp  ConvertAtenTanh.cpp  ConvertAtenTanhBackward.cpp  (+3 more)
lib/Conversion/TorchToDNN/Affine/: ConvertAtenLinear.cpp
lib/Conversion/TorchToDNN/Attention/: AttentionRegistry.cpp  ConvertAtenScaledDotProductAttention.cpp
lib/Conversion/TorchToDNN/Convolution/: ConvertAtenConv1d.cpp  ConvertAtenConv2d.cpp  (+14 more)
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CLI/: list-available-queries.mlir
test/Conversion/: torch-to-dnn-unmatched.mlir
test/Conversion/Activation/: fuse-decomposed-gelu.mlir  torch-to-dnn-celu.mlir  torch-to-dnn-elu-backward.mlir  torch-to-dnn-elu.mlir  torch-to-dnn-gelu-backward.mlir  torch-to-dnn-gelu.mlir  torch-to-dnn-glu.mlir  torch-to-dnn-hardshrink.mlir  torch-to-dnn-hardsigmoid.mlir  torch-to-dnn-hardswish.mlir  torch-to-dnn-hardtanh-backward.mlir  torch-to-dnn-hardtanh.mlir  torch-to-dnn-leaky-relu-backward.mlir  torch-to-dnn-leaky-relu.mlir  torch-to-dnn-log-sigmoid.mlir  torch-to-dnn-log-softmax-backward-data.mlir  torch-to-dnn-log-softmax-int.mlir  torch-to-dnn-log-softmax.mlir  torch-to-dnn-mish.mlir  torch-to-dnn-prelu.mlir  torch-to-dnn-relu-inplace.mlir  torch-to-dnn-relu.mlir  torch-to-dnn-relu6.mlir  torch-to-dnn-rrelu-with-noise-backward.mlir  torch-to-dnn-rrelu-with-noise-functional.mlir  torch-to-dnn-rrelu.mlir  torch-to-dnn-safe-softmax.mlir  torch-to-dnn-selu.mlir  torch-to-dnn-sigmoid-backward.mlir  torch-to-dnn-sigmoid.mlir  torch-to-dnn-silu.mlir  torch-to-dnn-softmax-backward-data.mlir  torch-to-dnn-softmax-int.mlir  torch-to-dnn-softmax.mlir  torch-to-dnn-softplus-backward.mlir  torch-to-dnn-softplus.mlir  torch-to-dnn-softshrink.mlir  torch-to-dnn-tanh-backward.mlir  torch-to-dnn-tanh.mlir  torch-to-dnn-threshold-backward.mlir  (+1 more)
test/Conversion/Affine/: torch-to-dnn-linear.mlir
test/Conversion/Attention/: torch-to-dnn-scaled-dot-product-attention.mlir
test/Conversion/Convolution/: torch-to-dnn-conv-tbc.mlir  torch-to-dnn-conv-transpose1d.mlir  torch-to-dnn-conv-transpose2d.mlir  torch-to-dnn-conv-transpose3d.mlir  torch-to-dnn-conv1d-padding.mlir  torch-to-dnn-conv1d.mlir  torch-to-dnn-conv2d-padding.mlir  torch-to-dnn-conv2d.mlir  torch-to-dnn-conv3d-padding.mlir  torch-to-dnn-conv3d.mlir  torch-to-dnn-convolution-backward.mlir  torch-to-dnn-convolution.mlir  torch-to-dnn-underscore-convolution-deprecated.mlir  torch-to-dnn-underscore-convolution.mlir
test/Conversion/Elementwise/: torch-to-dnn-add.mlir  torch-to-dnn-mul.mlir
test/Conversion/Embedding/: torch-to-dnn-embedding.mlir
test/Conversion/Matrix/: torch-to-dnn-matmul.mlir  torch-to-dnn-mm.mlir
test/Conversion/Normalization/: fuse-decomposed-layer-norm.mlir  torch-to-dnn-batch-norm.mlir  torch-to-dnn-layer-norm.mlir  torch-to-dnn-native-batch-norm-legit-no-training.mlir  torch-to-dnn-native-batch-norm.mlir
test/Conversion/Pooling/: torch-to-dnn-adaptive-avg-pool2d.mlir  torch-to-dnn-max-pool2d.mlir
test/Conversion/Recurrent/: torch-to-dnn-gru-data.mlir  torch-to-dnn-gru-input.mlir  torch-to-dnn-lstm-data.mlir  torch-to-dnn-lstm.mlir  torch-to-dnn-rnn-relu-data.mlir  torch-to-dnn-rnn-relu-input.mlir  torch-to-dnn-rnn-tanh-data.mlir  torch-to-dnn-rnn-tanh-input.mlir
test/Conversion/Shape/: torch-to-dnn-flatten.mlir
test/Dialect/: invalid.mlir  parse-print.mlir
test/InstalledConsumer/: CMakeLists.txt  main.cpp
test/Models/BERTBase/: bert-base-encoder-captures-all.mlir  bert-base-encoder-dnn.mlir
test/Models/GPT2/: gpt2-small-captures-all.mlir  gpt2-small-dnn.mlir
test/Models/MobileNetV3/: mobilenet-v3-small-captures-all.mlir  mobilenet-v3-small-dnn.mlir
test/Models/ResNet18/: resnet18-captures-all.mlir  resnet18-dnn.mlir
test/Models/ViTB16/: vit-b-16-captures-all.mlir  vit-b-16-dnn.mlir
test/Pipeline/: dnn-backend-activation.mlir  dnn-backend-contract-residual-torch-c.mlir  dnn-backend-contract-residual-torch.mlir  dnn-backend-contract-residual-type.mlir  dnn-backend-contract-unrealized-cast.mlir  dnn-backend-contract-valid.mlir  dnn-backend-convolution.mlir  dnn-backend-selection.mlir  dnn-backend-to-linalg.mlir  dnn-dynamic-configuration.mlir  dnn-value-semantics.mlir  fx-backend-to-linalg.mlir  torchscript-to-dnn-gru.mlir  torchscript-to-dnn-lstm.mlir  torchscript-to-dnn-rnn.mlir  torchscript-to-dnn.mlir
test/Semantics/: fx_capture_equivalence.py  restore-dnn-to-torch.mlir
tools/: CMakeLists.txt
tools/dnn-mlir-opt/: CMakeLists.txt
tools/dnn-opt/: CMakeLists.txt  dnn-opt.cpp
(+48 files in other folders)
